// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`html-renderer when there are spoilers present does renders correctly 1`] = `
<div>
  <div>
    <Spoilers>
      Text which should be hidden
    </Spoilers>
  </div>
</div>
`;

exports[`html-renderer when there is a heading does renders correctly 1`] = `
<div>
  <div>
    <h2
      id="heading-example"
    />
  </div>
</div>
`;
